--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             display: flex;
             align-items: flex-end;
             justify-content: center;
+            background-color: rgb(218, 187, 140);
         }
 
         .image-container {
