--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="maus.jpg" alt="DieSpeckMäuse">
+        <img src="maus.webp" alt="DieSpeckMäuse">
     </div>
 </body>
 </html>
