--- a/test/index.html
+++ b/test/index.html
@@ -243,7 +243,7 @@
 
 
     <div class="jumbotron fullscreen-jumbotron">
-        <div class="container">
+        <div >
             <h1 class="display-4 responsive-heading">DieSpeckMäuse</h1>
             <p class="lead">Gemeinsam wachsen, in und mit der Natur.</p>
         </div>
@@ -267,7 +267,7 @@
     </section>
 
     <!-- Our Concept -->
-    <section id="concept" class="container">
+    <section id="concept" class="container py-5">
         <div class="container">
             <h2 class="section-title">Unser Konzept</h2>
             <p>Unser pädagogisches Konzept basiert auf der Naturpädagogik. Wir fördern die kindliche Neugier und
@@ -318,7 +318,7 @@
     </section>
 
     <!-- Daily Schedule -->
-    <section id="daily-schedule">
+    <section id="daily-schedule py-5">
         <div class="container">
             <h2 class="section-title">Tagesablauf</h2>
             <p>Ein Tag bei DieSpeckMäuse beginnt mit einem gemeinsamen Morgenkreis, gefolgt von spannenden Aktivitäten
@@ -374,7 +374,7 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact" class="container">
+    <section id="contact" class="container py-5">
         <h2 class="section-title">Kontakt</h2>
         <p>Sie haben Fragen oder möchten uns besuchen? Kontaktieren Sie uns gerne!</p>
         <!-- <form>
