--- a/index.html
+++ b/index.html
@@ -6,8 +6,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DIESPECKMÄUSE</title>
     <style>
-              
-       body,
+        @font-face {
+            font-family: 'Quicksand';
+            font-weight: 300;
+            font-style: normal;
+            src: url('fonts/quicksand/Quicksand-light.eot');
+            src: url('fonts/quicksand/Quicksand-light.eot?#iefix') format('embedded-opentype'),
+                url('fonts/quicksand/Quicksand-light.woff2') format('woff2'),
+                url('fonts/quicksand/Quicksand-light.woff') format('woff'),
+                url('fonts/quicksand/Quicksand-light.ttf') format("truetype");
+            font-display: swap;
+        }
+
+        @font-face {
+            font-family: 'Quicksand';
+            font-weight: 400;
+            font-style: normal;
+            src: url('fonts/quicksand/Quicksand-Regular.eot');
+            src: url('fonts/quicksand/Quicksand-Regular.eot?#iefix') format('embedded-opentype'),
+                url('fonts/quicksand/Quicksand-Regular.woff2') format('woff2'),
+                url('fonts/quicksand/Quicksand-Regular.woff') format('woff'),
+                url('fonts/quicksand/Quicksand-Regular.ttf') format("truetype");
+            font-display: swap;
+        }
+
+        @font-face {
+            font-family: 'Quicksand';
+            font-weight: 500;
+            font-style: normal;
+            src: url('fonts/quicksand/Quicksand-Medium.eot');
+            src: url('fonts/quicksand/Quicksand-Medium.eot?#iefix') format('embedded-opentype'),
+                url('fonts/quicksand/Quicksand-Medium.woff2') format('woff2'),
+                url('fonts/quicksand/Quicksand-Medium.woff') format('woff'),
+                url('fonts/quicksand/Quicksand-Medium.ttf') format("truetype");
+            font-display: swap;
+        }
+
+        @font-face {
+            font-family: 'Quicksand';
+            font-weight: 600;
+            font-style: normal;
+            src: url('fonts/quicksand/Quicksand-SemiBold.eot');
+            src: url('fonts/quicksand/Quicksand-SemiBold.eot?#iefix') format('embedded-opentype'),
+                url('fonts/quicksand/Quicksand-SemiBold.woff2') format('woff2'),
+                url('fonts/quicksand/Quicksand-SemiBold.woff') format('woff'),
+                url('fonts/quicksand/Quicksand-SemiBold.ttf') format("truetype");
+            font-display: swap;
+        }
+
+        @font-face {
+            font-family: 'Quicksand';
+            font-weight: 700;
+            font-style: normal;
+            src: url('fonts/quicksand/Quicksand-Bold.eot');
+            src: url('fonts/quicksand/Quicksand-Bold.eot?#iefix') format('embedded-opentype'),
+                url('fonts/quicksand/Quicksand-Bold.woff2') format('woff2'),
+                url('fonts/quicksand/Quicksand-Bold.woff') format('woff'),
+                url('fonts/quicksand/Quicksand-Bold.ttf') format("truetype");
+            font-display: swap;
+        }
+
+        body,
         html {
             margin: 0;
             padding: 0;
@@ -22,7 +81,7 @@
         }
 
         .infobox {
-            font-family: 'Quicksand', sans-serif;
+            font-family: 'Quicksand';
             color: #563d30;
             text-align: center;
             flex: 1;
