--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <body>
     <div class="infobox">
         <p class="teaser">bald geht's los...</p>
-        <p class="email"><a href="mailto:hallo@diepseckmäuse.de">hallo@diepseckmäuse.de</a></p>
+        <p class="email"><a href="mailto:hallo@diespeckmäuse.de">hallo@diespeckmäuse.de</a></p>
     </div>
     <div class="image-container">
         <img src="teaser.png" alt="DieSpeckMäuse">
