--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DIESPECKMÄUSE</title>
+    <title>DIESPECKMÄUSE Kindergroßtagespflege</title>
     <style>
         @font-face {
             font-family: 'Quicksand';
@@ -123,7 +123,7 @@
 <body>
     <div class="infobox">
         <p class="teaser">bald geht's los...</p>
-        <p class="email"><a href="mailto:hallo@diespeckmäuse.de">hallo@diespeckmäuse.de</a></p>
+        <p class="email"><a href="mailto:hallo@diespeckmaeuse.de">hallo@diespeckmaeuse.de</a></p>
     </div>
     <div class="image-container">
         <img src="teaser.png" alt="DieSpeckMäuse">
