--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
 
 <body>
     <div class="infobox">
-        <p class="teaser">bald geht's los...</p>
+        <p class="teaser">Bald geht's los!</p>
+        <p class="teaser">Nähere Informationen folgen in den nächsten Tagen.</p>
         <p class="email"><a href="mailto:hallo@diespeckmaeuse.de">hallo@diespeckmaeuse.de</a></p>
     </div>
     <div class="image-container">
