--- a/20240727/index.html
+++ b/20240727/index.html
@@ -149,8 +149,8 @@
         <div class="container">
             <h2 class="section-title">Über uns</h2>
             <p>DIESPECKMÄUSE ist eine Natur-Kindergroßtagespflege, die im Herbst 2024 ihre Tore öffnen wird. Idyllisch
-                am Waldrand am Ortsrand von Diespeck gelegen, werden hier Kinder im Alter von 2-7 Jahren die Natur jeden
-                Tag hautnah erleben und durch spielerische Entdeckungen lernen dürfen.</p>
+                am Ortsrand von Diespeck gelegen, werden hier Kinder im Alter von 2-7 Jahren die Natur jeden Tag hautnah
+                erleben und durch spielerische Entdeckungen lernen dürfen.</p>
             <p>Unsere Vision ist es, Kindern einen Ort zu bieten, an dem sie sich frei entfalten können und die Natur
                 als wertvollen Lernraum kennenlernen. Bei den DIESPECKMÄUSEN legen wir großen Wert darauf, dass die
                 Kinder in einer sicheren und liebevollen Umgebung aufwachsen, in der ihre Neugierde und ihr
