--- a/20240727/index.html
+++ b/20240727/index.html
@@ -165,8 +165,10 @@
         <p>Wir möchten, dass Kinder...</p>
         <ul>
             <li>ein tiefes Verständnis und eine Wertschätzung für die Natur entwickeln.</li>
-            <li>ihre motorischen Fähigkeiten durch Outdoor-Aktivitäten stärken.</li>
-            <li>ihre sozialen Kompetenzen in der Gemeinschaft erweitern.</li>
+            <li>ihre motorischen Fähigkeiten durch vielfältige nicht genormte Bewegungsanlässe- und Möglichkeiten stärken.</li>
+            <li>einen Raum erhalten, in dem sie ihre Kreativität und Fantasie frei entfalten können.</li>
+            <li>soziale Kompetenzen in der Gemeinschaft erweitern.</li>
+            <li>ihre Selbstwirksamkeit erleben.</li>
         </ul>
         <p>Durch Waldspaziergänge, kreatives Basteln mit Naturmaterialien und gemeinschaftliche Projekte erleben die
             Kinder die Natur intensiv und lernen nachhaltig.</p>
