--- a/20240727/index.html
+++ b/20240727/index.html
@@ -256,8 +256,8 @@
 
     <footer class="footer text-center py-3">
         <p>&copy; 2024 DIESPECKMÄUSE - Alle Rechte vorbehalten</p>
-        <a href="#" class="text-white">Facebook</a> |
-        <a href="#" class="text-white">Instagram</a> |
+        <a href="https://www.facebook.com/profile.php?id=61563484612452" class="text-white">Facebook</a> |
+        <a href="https://www.instagram.com/diespeckmaeuse/" class="text-white">Instagram</a> |
         <a href="impressum.html" class="text-white">Impressum</a>
     </footer>
 
