--- a/20240727/index.html
+++ b/20240727/index.html
@@ -244,7 +244,7 @@
             <p>Wir freuen uns darauf, Ihr Kind bei uns willkommen zu heißen und stehen Ihnen für Fragen und weitere
                 Informationen gerne zur Verfügung. </p>
             <h4>Telefon und E-Mail</h4>
-            <p>Tel: 0160/96862080 (Susan)<br>E-Mail: hallo@diespeckmaeuse.de</p>
+            <p>Tel: 0160/96862080 (Susan)<br>E-Mail: <a href="mailto:hallo@diespeckmaeuse.de">hallo@diespeckmaeuse.de</a></p>
             <!-- <h4>Adresse und Anfahrt</h4>
             <p>91456 Diespeck</p> -->
         </div>
