--- a/v1/index.html
+++ b/v1/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DIESPECKMÄUSE - Kinder Großtagespflege</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="fonts/quicksand/Quicksand.css" rel="stylesheet">
-    <link href="fonts/AmaticSC/stylesheet.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Gloria+Hallelujah&family=Quicksand:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <style>
         body {
             background-color: rgb(218, 187, 140);
@@ -138,7 +138,7 @@
 
     <div class="jumbotron fullscreen-jumbotron">
         <div class="image-container">
-            <img src="img/maus.png" alt="DIESPECKMÄUSE Logo">
+            <img src="maus.png" alt="DieSpeckMäuse">
             <div class="subtitle-container">
                 <p class="subtitle">Gemeinsam wachsen, in und mit der Natur.</p>
             </div>
@@ -165,8 +165,7 @@
         <p>Wir möchten, dass Kinder...</p>
         <ul>
             <li>ein tiefes Verständnis und eine Wertschätzung für die Natur entwickeln.</li>
-            <li>ihre motorischen Fähigkeiten durch vielfältige nicht genormte Bewegungsanlässe- und Möglichkeiten
-                stärken.</li>
+            <li>ihre motorischen Fähigkeiten durch vielfältige nicht genormte Bewegungsanlässe- und Möglichkeiten stärken.</li>
             <li>einen Raum erhalten, in dem sie ihre Kreativität und Fantasie frei entfalten können.</li>
             <li>soziale Kompetenzen in der Gemeinschaft erweitern.</li>
             <li>ihre Selbstwirksamkeit erleben.</li>
@@ -207,19 +206,19 @@
 
             <div class="row">
                 <div class="col-md-4 team-member">
-                    <img src="img/susan.jpg" class="img-fluid" alt="Susan Lantenhammer">
+                    <img src="susan.jpg" class="img-fluid" alt="Susan Lantenhammer">
                     <h4>Susan Lantenhammer</h4>
                 </div>
                 <div class="col-md-4 team-member">
-                    <img src="img/diana.jpg" class="img-fluid" alt="Diana Fornataro">
+                    <img src="diana.jpg" class="img-fluid" alt="Diana Fornataro">
                     <h4>Diana Fornataro</h4>
                 </div>
                 <div class="col-md-4 team-member">
-                    <img src="img/magdalena.jpg" class="img-fluid" alt="Magdalena Pfundt">
+                    <img src="magdalena.jpg" class="img-fluid" alt="Magdalena Pfundt">
                     <h4>Magdalena Pfundt</h4>
                 </div>
                 <div class="col-md-4 team-member">
-                    <img src="img/christian.jpg" class="img-fluid" alt="Christian Kugler">
+                    <img src="christian.jpg" class="img-fluid" alt="Christian Kugler">
                     <h4>Christian Kugler</h4>
                 </div>
 
@@ -245,8 +244,7 @@
             <p>Wir freuen uns darauf, Ihr Kind bei uns willkommen zu heißen und stehen Ihnen für Fragen und weitere
                 Informationen gerne zur Verfügung. </p>
             <h4>Telefon und E-Mail</h4>
-            <p>Tel: 0160/96862080 (Susan)<br>E-Mail: <a
-                    href="mailto:hallo@diespeckmaeuse.de">hallo@diespeckmaeuse.de</a></p>
+            <p>Tel: 0160/96862080 (Susan)<br>E-Mail: <a href="mailto:hallo@diespeckmaeuse.de">hallo@diespeckmaeuse.de</a></p>
             <!-- <h4>Adresse und Anfahrt</h4>
             <p>91456 Diespeck</p> -->
         </div>
@@ -263,9 +261,9 @@
         <a href="impressum.html" class="text-white">Impressum</a>
     </footer>
 
-    <script src="js/jquery-3.5.1.slim.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function () {
             $('.navbar-nav>li>a').on('click', function () {
