--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 in
                 ihrem Tempo wachsen zu können.</p>
             <p>Wir freuen uns auf eine vertrauensvolle Zusammenarbeit, in der wir Ihre Kinder auf spannende Abenteuer im
-                Wald und auf der Wiesen mitnehmen und ihnen die Wunder der Natur näherbringen. Unser Ziel ist es, eine
+                Wald und auf der Wiese mitnehmen und ihnen die Wunder der Natur näherbringen. Unser Ziel ist es, eine
                 liebevolle und familiäre Atmosphäre zu schaffen, in der sich jedes Kind wohl und geborgen fühlt!</p>
             <p>Unterstützt werden wir von Christian, Mitgründer der DIESPECKMÄUSE und erfahrener Waldpapa. Er
                 unterstützt
