--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </ul>
         <p>Durch Waldspaziergänge, kreatives Basteln mit Naturmaterialien und gemeinschaftliche Projekte erleben die
             Kinder die Natur intensiv und lernen nachhaltig.</p>
-        <p>Warum eine Kinder Großtagespglge in der Natur? Kinder in der Natur entwickeln sich...</p>
+        <p>Warum eine Kinder Großtagespflege in der Natur? Kinder in der Natur entwickeln sich...</p>
         <ul>
             <li>gesünder und ausgeglichener.</li>
             <li>kreativer und selbstständiger.</li>
