--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link href="fonts/quicksand/Quicksand.css" rel="stylesheet">
     <link href="fonts/AmaticSC/stylesheet.css" rel="stylesheet">
 
+    <link rel="apple-touch-icon" sizes="180x180" href="fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="fav/favicon-16x16.png">
+    <link rel="manifest" href="fav/site.webmanifest">
+
     <style>
         body {
             background-color: rgb(218, 187, 140);
