--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DIESPECKMÄUSE - Kinder Großtagespflege</title>
+    <title>DIESPECKMÄUSE Natur-Kindergroßtagespflege</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="fonts/quicksand/Quicksand.css" rel="stylesheet">
     <link href="fonts/AmaticSC/stylesheet.css" rel="stylesheet">
