--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <a class="nav-link" href="#team">Das Team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#mitmachen">Mitmachen!</a>
+                    <a class="nav-link" href="#presse">Presse</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="#testimonials">Elternstimmen</a>
@@ -222,7 +222,7 @@
     <section id="team" class="bg-light py-5">
         <div class="container">
             <h2 class="section-title">Das Team</h2>
-            <p>Wir sind Susan, Diana und Magdalena, pädagogische Fachkräfte, mit einer gemeinsamen Leidenschaft: der
+            <p>Wir sind Susan und Diana, pädagogische Fachkräfte, mit einer gemeinsamen Leidenschaft: der
                 Arbeit
                 mit Kindern in der Natur. Unsere Überzeugung ist, dass das Draußensein und das Erkunden der natürlichen
                 Umgebung nicht nur Spaß macht, sondern auch eine essentielle Rolle in der Entwicklung der Kinder spielt.
@@ -253,10 +253,6 @@
                     <h4>Diana Fornataro</h4>
                 </div>
                 <div class="col-md-4 team-member">
-                    <img src="img/magdalena.jpg" class="img-fluid" alt="Magdalena Pfundt">
-                    <h4>Magdalena Pfundt</h4>
-                </div>
-                <div class="col-md-4 team-member">
                     <img src="img/christian.jpg" class="img-fluid" alt="Christian Kugler">
                     <h4>Christian Kugler</h4>
                 </div>
@@ -266,7 +262,7 @@
         </div>
     </section>
 
-    <section id="mitmachen" class="py-5">
+    <!-- <section id="mitmachen" class="py-5">
         <div class="container">
             <h2 class="section-title">Mitmachen!</h2>
             <p>Wir suchen engagierte Helfer, die uns ehrenamtlich beim Aufbau unserer Einrichtung unterstützen möchten.
@@ -274,6 +270,21 @@
                 aktiv mitzugestalten, freuen wir uns über Ihre Kontaktaufnahme. Jede helfende Hand ist herzlich
                 willkommen, sei es bei handwerklichen Tätigkeiten, organisatorischen Aufgaben oder der Gründung eines
                 Fördervereins!</p>
+        </div>
+    </section> -->
+
+    <section id="presse" class="py-5">
+        <div class="container">
+            <h2 class="section-title">Presse</h2>
+            <p><span> Fränkische Landeszeitung, 27.07.2024:</span>
+            <div class="pdf-viewer-container">
+                <iframe
+                    src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://github.com/diespeckmaus/diespeckmaus.github.io/blob/main/pdf/FLZ_27072024.pdf"
+                    style="width: 100%; height: 100vh;" frameborder="0"></iframe>
+            </div>
+
+
+            </p>
         </div>
     </section>
 
