--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <p><span> Fränkische Landeszeitung, 27.07.2024:</span>
             <div class="pdf-viewer-container">
                 <iframe
-                    src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://github.com/diespeckmaus/diespeckmaus.github.io/blob/main/pdf/FLZ_27072024.pdf"
+                    src="https://mozilla.github.io/pdf.js/web/viewer.html?file=/pdf/FLZ_27072024.pdf"
                     style="width: 100%; height: 100vh;" frameborder="0"></iframe>
             </div>
 
