--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <p><span> Fränkische Landeszeitung, 27.07.2024:</span>
             <div class="pdf-viewer-container">
                 <iframe
-                    src="/js/pdfjs/web/viewer.html?file=/pdf/FLZ_27072024.pdf"
+                    src="https://raw.githubusercontent.com/diespeckmaus/diespeckmaus.github.io/ff2bceadf4a8d3bf1c47ffe7fc8c1421f4c0000c/js/pdfjs/web/viewer.html?file=https://github.com/diespeckmaus/diespeckmaus.github.io/blob/ff2bceadf4a8d3bf1c47ffe7fc8c1421f4c0000c/pdf/FLZ_27072024.pdf"
                     style="width: 100%; height: 100vh;" frameborder="0"></iframe>
             </div>
 
