--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <section id="about" class="bg-light py-5">
         <div class="container">
             <h2 class="section-title">Über uns</h2>
-            <p>DIESPECKMÄUSE ist eine Natur-Kindergroßtagespflege, die im Herbst 2024 ihre Tore öffnen wird. Idyllisch
+            <p>DIESPECKMÄUSE ist eine Natur-Kindergroßtagespflege, welche im November 2024 eröffnet wurde. Idyllisch
                 am Ortsrand von Diespeck gelegen, werden hier Kinder im Alter von 2-7 Jahren die Natur jeden Tag hautnah
                 erleben und durch spielerische Entdeckungen lernen dürfen.</p>
             <p>Unsere Vision ist es, Kindern einen Ort zu bieten, an dem sie sich frei entfalten können und die Natur
@@ -282,9 +282,16 @@
                     src="https://diespeckmäuse.de/js/pdfjs/web/viewer.html?file=https://diespeckmäuse.de/pdf/FLZ_27072024.pdf"
                     style="width: 100%; height: 100vh;" frameborder="0"></iframe>
             </div>
-
-
             </p>
+            <p><span> Fränkische Landeszeitung, 04.11.2024:</span>
+                <div class="pdf-viewer-container">
+                    <iframe 
+                        src="https://diespeckmäuse.de/js/pdfjs/web/viewer.html?file=https://diespeckmäuse.de/pdf/FLZ_04112024.pdf"
+                        style="width: 100%; height: 100vh;" frameborder="0"></iframe>
+                </div>
+                </p>
+
+
         </div>
     </section>
 
