--- a/index.html
+++ b/index.html
@@ -279,15 +279,15 @@
             <p><span> Fränkische Landeszeitung, 27.07.2024:</span>
             <div class="pdf-viewer-container">
                 <iframe 
-                    src="https://diespeckmäuse.de/js/pdfjs/web/viewer.html?file=https://diespeckmäuse.de/pdf/FLZ_27072024.pdf"
-                    style="width: 100%; height: 50vh;" frameborder="0"></iframe>
+                    src="https://diespeckmäuse.de/js/pdfjs/web/viewer.html?file=https://diespeckmäuse.de/pdf/FLZ_27072024.pdf#zoom=page-width"
+                    style="width: 100%; height: 60vh;" frameborder="0"></iframe>
             </div>
             </p>
             <p><span> Fränkische Landeszeitung, 05.11.2024:</span>
                 <div class="pdf-viewer-container">
                     <iframe 
-                        src="https://diespeckmäuse.de/js/pdfjs/web/viewer.html?file=https://diespeckmäuse.de/pdf/FLZ_05112024.pdf"
-                        style="width: 100%; height: 50vh;" frameborder="0"></iframe>
+                        src="https://diespeckmäuse.de/js/pdfjs/web/viewer.html?file=https://diespeckmäuse.de/pdf/FLZ_05112024.pdf#zoom=page-width"
+                        style="width: 100%; height: 60vh;" frameborder="0"></iframe>
                 </div>
                 </p>
 
