--- a/index.html
+++ b/index.html
@@ -276,6 +276,13 @@
     <section id="presse" class="py-5">
         <div class="container">
             <h2 class="section-title">Presse</h2>
+            <p><span> Fränkische Landeszeitung, 08.11.2024:</span>
+                <div class="pdf-viewer-container">
+                    <iframe 
+                        src="https://diespeckmäuse.de/js/pdfjs/web/viewer.html?file=https://diespeckmäuse.de/pdf/FLZ_08112024.pdf#zoom=page-width"
+                        style="width: 100%; height: 60vh;" frameborder="0"></iframe>
+                </div>
+                </p>
             <p><span> Fränkische Landeszeitung, 27.07.2024:</span>
             <div class="pdf-viewer-container">
                 <iframe 
