--- a/index.html
+++ b/index.html
@@ -277,21 +277,21 @@
         <div class="container">
             <h2 class="section-title">Presse</h2>
             <p><span> Fränkische Landeszeitung, 08.11.2024:</span><br><a href="https://www.flz.de/mit-matsch-und-kreativitaet-in-diespeck-startet-einzigartige-natur-kita/cnt-id-ps-8945605d-28ff-4d72-85f1-f79c2c4c94eb">FLZ Online</a>
-                <div class="pdf-viewer-container">
+                <div class="pdf-viewer-container" style="display: flex; justify-content: flex-start; align-items: flex-start;"> 
                     <iframe 
                         src="https://diespeckmäuse.de/js/pdfjs/web/viewer.html?file=https://diespeckmäuse.de/pdf/FLZ_08112024.pdf#zoom=page-width"
                         style="width: 100%; height: 60vh;" frameborder="0"></iframe>
                 </div>
                 </p>
             <p><span> Fränkische Landeszeitung, 27.07.2024:</span>
-            <div class="pdf-viewer-container">
+            <div class="pdf-viewer-container" style="display: flex; justify-content: flex-start; align-items: flex-start;">
                 <iframe 
                     src="https://diespeckmäuse.de/js/pdfjs/web/viewer.html?file=https://diespeckmäuse.de/pdf/FLZ_27072024.pdf#zoom=page-width"
                     style="width: 100%; height: 60vh;" frameborder="0"></iframe>
             </div>
             </p>
             <p><span> Fränkische Landeszeitung, 05.11.2024:</span>
-                <div class="pdf-viewer-container">
+                <div class="pdf-viewer-container" style="display: flex; justify-content: flex-start; align-items: flex-start;">
                     <iframe 
                         src="https://diespeckmäuse.de/js/pdfjs/web/viewer.html?file=https://diespeckmäuse.de/pdf/FLZ_05112024.pdf#zoom=page-width"
                         style="width: 100%; height: 60vh;" frameborder="0"></iframe>
