--- a/impressum.html
+++ b/impressum.html
@@ -44,32 +44,17 @@
         <h1>Impressum</h1>
 
         <h2>Angaben gemäß § 5 TMG</h2>
+        <h3>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</h3>
         <p>
-            DIESPECKMÄUSE Natur-Kindergroßtagespflege<br>
+            DIESPECKMÄUSE GbR Natur-Kindergroßtagespflege<br>
+            Am alten Sportplatz 1 <br>
             91456 Diespeck<br>
         </p>
-
-        <h2>Vertreten durch: Susan Lantenhammer</h2>
+        <p>Vertreten durch: Susan Lantenhammer, Diana Fornataro</p>
         <p>
             E-Mail: hallo@diespeckmaeuse.de<br>
             Telefon: 0160/96862080
         </p>
-
-        <h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</h2>
-        <p>
-            DIESPECKMÄUSE Natur-Kindergroßtagespflege, Susan Lantenhammer<br>
-            91456 Diespeck
-
-        </p>
-
-        <h2>Kontakt:</h2>
-        <p>
-            
-            E-Mail: hallo@diespeckmaeuse.de<br>
-            Telefon: 0160/96862080
-        </p>
-        </p>
-
 
 
         <h2>Haftungsausschluss (Disclaimer):</h2>
