--- a/index.html
+++ b/index.html
@@ -311,6 +311,8 @@
             <p>Tel: 0160/96862080 (Susan)<br>E-Mail: <a
                     href="mailto:hallo@diespeckmaeuse.de">hallo@diespeckmaeuse.de</a></p>
             <h4>Adresse und Anfahrt</h4>
+            <p>Am alten Sportplatz 1<br>
+            91456 Diespeck</p>
             <p>Google Maps Link zur Anfahrt: <a
                     href="https://maps.app.goo.gl/7cf7PBaQETwQcg9C6">https://maps.app.goo.gl/7cf7PBaQETwQcg9C6</a> Bitte
                 vor der Schranke parken und über den Sportplatz laufen!</p>
