--- a/index.html.old.html
+++ b/index.html.old.html
@@ -14,13 +14,6 @@
     <link rel="icon" type="image/png" sizes="16x16" href="fav/favicon-16x16.png">
     <link rel="manifest" href="fav/site.webmanifest">
 
-    <!-- Add meta descriptions -->
-    <meta name="description" content="DIESPECKMÄUSE - Natur-Kindergroßtagespflege in Diespeck. Naturpädagogik für Kinder von 2-7 Jahren.">
-    <meta name="keywords" content="Kindergroßtagespflege, Naturpädagogik, Diespeck, Kinderbetreuung">
-    <!-- Add social media meta tags -->
-    <meta property="og:title" content="DIESPECKMÄUSE Natur-Kindergroßtagespflege">
-    <meta property="og:description" content="Naturnahe Kinderbetreuung in Diespeck">
-
     <style>
         body {
             background-color: rgb(218, 187, 140);
@@ -32,7 +25,6 @@
         .navbar {
             background-color: #563d30;
             margin-bottom: 0;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
 
         .navbar-brand {
@@ -44,18 +36,14 @@
 
         .nav-link {
             color: #dabb8c !important;
-            padding: 0.8rem 1rem;
-        }
-
-        .nav-link:hover {
-            color: #ffffff !important;
-            transition: color 0.3s ease;
         }
 
         .nav-icon {
             width: 24px;
+
             height: 24px;
             vertical-align: middle;
+
         }
 
         .navbar-toggler-icon {
@@ -104,6 +92,7 @@
             margin: 0 auto;
         }
 
+
         .subtitle {
             font-family: 'Amatic SC', cursive;
             font-size: 2rem;
@@ -112,6 +101,7 @@
             font-weight: bold;
         }
 
+
         #contact img {
             max-width: 100%;
             height: auto;
@@ -119,14 +109,11 @@
             margin: 0 auto;
         }
 
+
         #contact {
+
             padding: 1rem 0;
-
-        }
-
-        .gallery-img {
-            border-radius: 10px;
-
+            /* Adjust padding as needed */
         }
 
         @media (max-width: 768px) {
@@ -142,30 +129,6 @@
                 width: 20px;
                 height: 20px;
             }
-
-            .navbar-collapse {
-                background-color: #563d30;
-                padding: 1rem;
-            }
-        }
-
-        /* Add responsive font sizes */
-        html {
-            font-size: 16px;
-        }
-
-        @media (max-width: 768px) {
-            html {
-                font-size: 14px;
-            }
-            .navbar-brand {
-                font-size: 1.2rem;
-            }
-        }
-
-        /* Add smooth scrolling */
-        html {
-            scroll-behavior: smooth;
         }
     </style>
 </head>
@@ -206,6 +169,7 @@
                         <img src="./img/instagram2.svg" alt="Instagram" class="nav-icon">
                     </a>
                 </li>
+
             </ul>
         </div>
     </nav>
@@ -229,52 +193,6 @@
                 als wertvollen Lernraum kennenlernen. Bei den DIESPECKMÄUSEN legen wir großen Wert darauf, dass die
                 Kinder in einer sicheren und liebevollen Umgebung aufwachsen, in der ihre Neugierde und ihr
                 Entdeckerdrang gefördert werden.</p>
-        </div>
-        <!-- Galerie-Bilder -->
-        <div class="container">
-            <div class="row">
-
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse9.jpg" class="img-fluid  gallery-img" alt="Bild 9"
-                        data-index="0" loading="lazy">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse4.jpg" class="img-fluid  gallery-img" alt="Bild 4"
-                        data-index="1" loading="lazy">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse6.jpg" class="img-fluid  gallery-img" alt="Bild 6"
-                        data-index="2" loading="lazy">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse5.jpg" class="img-fluid  gallery-img" alt="Bild 5"
-                        data-index="3" loading="lazy">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse2.jpg" class="img-fluid  gallery-img" alt="Bild 2"
-                        data-index="4" loading="lazy">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse7.jpg" class="img-fluid  gallery-img" alt="Bild 7"
-                        data-index="5" loading="lazy">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse8.jpg" class="img-fluid  gallery-img" alt="Bild 8"
-                        data-index="6" loading="lazy">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse11.jpg" class="img-fluid  gallery-img" alt="Bild 11"
-                        data-index="7" loading="lazy">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse1.jpg" class="img-fluid  gallery-img" alt="Bild 1"
-                        data-index="8" loading="lazy">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse3.jpg" class="img-fluid  gallery-img" alt="Bild 3"
-                        data-index="9">
-                </div>
-            </div>
         </div>
     </section>
 
@@ -338,41 +256,49 @@
                     <img src="img/christian.jpg" class="img-fluid" alt="Christian Kugler">
                     <h4>Christian Kugler</h4>
                 </div>
+
             </div>
+        </div>
         </div>
     </section>
 
-    <!-- Presse section -->
+    <!-- <section id="mitmachen" class="py-5">
+        <div class="container">
+            <h2 class="section-title">Mitmachen!</h2>
+            <p>Wir suchen engagierte Helfer, die uns ehrenamtlich beim Aufbau unserer Einrichtung unterstützen möchten.
+                Wenn Sie Interesse daran haben, Teil unseres Projekts zu werden und die Entwicklung der DIESPECKMÄUSE
+                aktiv mitzugestalten, freuen wir uns über Ihre Kontaktaufnahme. Jede helfende Hand ist herzlich
+                willkommen, sei es bei handwerklichen Tätigkeiten, organisatorischen Aufgaben oder der Gründung eines
+                Fördervereins!</p>
+        </div>
+    </section> -->
+
     <section id="presse" class="py-5">
         <div class="container">
             <h2 class="section-title">Presse</h2>
-            <p><span> Fränkische Landeszeitung, 08.11.2024:</span><br>
-                <a
-                    href="https://www.flz.de/mit-matsch-und-kreativitaet-in-diespeck-startet-einzigartige-natur-kita/cnt-id-ps-8945605d-28ff-4d72-85f1-f79c2c4c94eb">FLZ
-                    Online</a>
-            <div class="pdf-viewer-container"
-                style="display: flex; justify-content: flex-start; align-items: flex-start;">
-                <iframe
-                    src="https://diespeckmäuse.de/js/pdfjs/web/viewer.html?file=https://diespeckmäuse.de/pdf/FLZ_08112024.pdf#zoom=page-fit"
-                    style="width: 100%; height: 60vh;" frameborder="0"></iframe>
-            </div>
-            </p>
+            <p><span> Fränkische Landeszeitung, 08.11.2024:</span><br><a href="https://www.flz.de/mit-matsch-und-kreativitaet-in-diespeck-startet-einzigartige-natur-kita/cnt-id-ps-8945605d-28ff-4d72-85f1-f79c2c4c94eb">FLZ Online</a>
+                <div class="pdf-viewer-container" style="display: flex; justify-content: flex-start; align-items: flex-start;"> 
+                    <iframe 
+                        src="https://diespeckmäuse.de/js/pdfjs/web/viewer.html?file=https://diespeckmäuse.de/pdf/FLZ_08112024.pdf#zoom=page-fit"
+                        style="width: 100%; height: 60vh;" frameborder="0"></iframe>
+                </div>
+                </p>
             <p><span> Fränkische Landeszeitung, 27.07.2024:</span>
-            <div class="pdf-viewer-container"
-                style="display: flex; justify-content: flex-start; align-items: flex-start;">
-                <iframe
+            <div class="pdf-viewer-container" style="display: flex; justify-content: flex-start; align-items: flex-start;">
+                <iframe 
                     src="https://diespeckmäuse.de/js/pdfjs/web/viewer.html?file=https://diespeckmäuse.de/pdf/FLZ_27072024.pdf#zoom=page-fit"
                     style="width: 100%; height: 60vh;" frameborder="0"></iframe>
             </div>
             </p>
             <p><span> Fränkische Landeszeitung, 05.11.2024:</span>
-            <div class="pdf-viewer-container"
-                style="display: flex; justify-content: flex-start; align-items: flex-start;">
-                <iframe
-                    src="https://diespeckmäuse.de/js/pdfjs/web/viewer.html?file=https://diespeckmäuse.de/pdf/FLZ_05112024.pdf#zoom=page-fit"
-                    style="width: 100%; height: 60vh;" frameborder="0"></iframe>
-            </div>
-            </p>
+                <div class="pdf-viewer-container" style="display: flex; justify-content: flex-start; align-items: flex-start;">
+                    <iframe 
+                        src="https://diespeckmäuse.de/js/pdfjs/web/viewer.html?file=https://diespeckmäuse.de/pdf/FLZ_05112024.pdf#zoom=page-fit"
+                        style="width: 100%; height: 60vh;" frameborder="0"></iframe>
+                </div>
+                </p>
+
+
         </div>
     </section>
 
@@ -383,18 +309,18 @@
                 Informationen gerne zur Verfügung. </p>
             <h4>Telefon und E-Mail</h4>
             <p>Tel: 0160/96862080 (Susan)<br>E-Mail: <a
-                    href="mailto:hallo@diespeckmaeuse.de">hallo@diespeckmaeuse.de</a>
-            </p>
+                    href="mailto:hallo@diespeckmaeuse.de">hallo@diespeckmaeuse.de</a></p>
             <h4>Adresse und Anfahrt</h4>
             <p>Am alten Sportplatz 1<br>
-                91456 Diespeck</p>
-            <p>Google Maps Link zur Anfahrt:
-                <a href="https://maps.app.goo.gl/7cf7PBaQETwQcg9C6">https://maps.app.goo.gl/7cf7PBaQETwQcg9C6</a>
-                Bitte vor der Schranke parken und über den Sportplatz laufen!
-            </p>
-            <img src="./img/anfahrt.jpg" alt="Anfahrt">
+            91456 Diespeck</p>
+            <p>Google Maps Link zur Anfahrt: <a
+                    href="https://maps.app.goo.gl/7cf7PBaQETwQcg9C6">https://maps.app.goo.gl/7cf7PBaQETwQcg9C6</a> Bitte
+                vor der Schranke parken und über den Sportplatz laufen!</p>
+            <img src="./img/anfahrt.jpg">
+        </div>
         </div>
     </section>
+
 
     <footer class="footer text-center py-3">
         <p>&copy; 2024 DIESPECKMÄUSE - Alle Rechte vorbehalten</p>
@@ -405,96 +331,18 @@
         <a href="https://www.instagram.com/diespeckmaeuse/" class="text-white d-inline-flex align-items-center">
             <img src="./img/instagram.svg" alt="Insta" class="me-2" style="width: 20px; height: 20px;"> Instagram
         </a> |
+
         <a href="impressum.html" class="text-white">Impressum</a>
     </footer>
 
-    <!-- Modal with Carousel for the Image Gallery -->
-    <div class="modal fade" id="galleryModal" tabindex="-1" role="dialog" aria-labelledby="galleryModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <!-- <h5 class="modal-title" id="galleryModalLabel">Galerie</h5> -->
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body p-0">
-                    <div id="galleryCarousel" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#galleryCarousel" data-slide-to="0" class="active"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="1"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="2"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="3"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="4"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="5"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="6"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="7"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="8"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="9"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse9.jpg" alt="Bild 1" loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse4.jpg" alt="Bild 2" loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse6.jpg" alt="Bild 3" loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse5.jpg" alt="Bild 4"loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse2.jpg" alt="Bild 5"loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse7.jpg" alt="Bild 6"loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse8.jpg" alt="Bild 7"loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse11.jpg" alt="Bild 8"loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse1.jpg" alt="Bild 9"loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse3.jpg" alt="Bild 10"loading="lazy">
-                            </div>
-                        </div>
-                        <a class="carousel-control-prev" href="#galleryCarousel" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Zurück</span>
-                        </a>
-                        <a class="carousel-control-next" href="#galleryCarousel" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Weiter</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <!-- Scripts -->
     <script src="js/jquery-3.5.1.slim.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function () {
-            // Collapse the navbar on nav-link click
             $('.navbar-nav>li>a').on('click', function () {
                 $('.navbar-collapse').collapse('hide');
-            });
-
-            // When a gallery image is clicked, open the modal and jump to the correct slide
-            $('.gallery-img').on('click', function () {
-                var index = $(this).data('index');
-                $('#galleryModal').modal('show');
-                $('#galleryCarousel').carousel(parseInt(index, 10));
             });
         });
     </script>
