--- a/index.html
+++ b/index.html
@@ -274,6 +274,10 @@
                     <img src="img/gallery/diespeckmaeuse3.jpg" class="img-fluid  gallery-img" alt="Bild 3"
                         data-index="9">
                 </div>
+                <div class="col-md-4 mb-4">
+                    <img src="img/gallery/diespeckmaeuse12.jpg" class="img-fluid  gallery-img" alt="Bild 12"
+                        data-index="10">
+                </div>
             </div>
         </div>
     </section>
@@ -432,6 +436,7 @@
                             <li data-target="#galleryCarousel" data-slide-to="7"></li>
                             <li data-target="#galleryCarousel" data-slide-to="8"></li>
                             <li data-target="#galleryCarousel" data-slide-to="9"></li>
+                            <li data-target="#galleryCarousel" data-slide-to="10"></li>
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -463,6 +468,9 @@
                             </div>
                             <div class="carousel-item">
                                 <img class="d-block w-100" src="img/gallery/diespeckmaeuse3.jpg" alt="Bild 10"loading="lazy">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse12.jpg" alt="Bild 11"loading="lazy">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#galleryCarousel" role="button" data-slide="prev">
