--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DIESPECKMÄUSE Natur-Kindergroßtagespflege</title>
+    <link rel="canonical" href="https://diespeckmäuse.de">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="fonts/quicksand/Quicksand.css" rel="stylesheet">
     <link href="fonts/AmaticSC/stylesheet.css" rel="stylesheet">
