--- a/index.html
+++ b/index.html
@@ -378,6 +378,14 @@
                     style="width: 100%; height: 60vh;" frameborder="0"></iframe>
             </div>
             </p>
+            <p><span> Fränkische Landeszeitung, 15.04.2025:</span>
+                <div class="pdf-viewer-container"
+                    style="display: flex; justify-content: flex-start; align-items: flex-start;">
+                    <iframe
+                        src="https://diespeckmäuse.de/js/pdfjs/web/viewer.html?file=https://diespeckmäuse.de/pdf/FLZ_15042025.pdf#zoom=page-fit"
+                        style="width: 100%; height: 60vh;" frameborder="0"></iframe>
+                </div>
+                </p>
         </div>
     </section>
 
