--- a/archive.html
+++ b/archive.html
@@ -5,8 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>DIESPECKMÄUSE - Social Media Archiv</title>
-    <link href="css/css2?family=Amatic+SC:wght@700&family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="canonical" href="https://diespeckmäuse.de">
+    <!-- <link href="css/css2?family=Amatic+SC:wght@700&family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="css/archive.css">
+    <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
+    <link href="fonts/quicksand/Quicksand.css" rel="stylesheet">
+    <link href="fonts/AmaticSC/stylesheet.css" rel="stylesheet">
 
     <link rel="apple-touch-icon" sizes="180x180" href="fav/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="fav/favicon-32x32.png">
