--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Add meta descriptions -->
     <meta name="description"
         content="DIESPECKMÄUSE - Natur-Kindergroßtagespflege in Diespeck. Naturpädagogik für Kinder von 2-7 Jahren.">
-    <meta name="keywords" content="Kindergroßtagespflege, Naturpädagogik, Diespeck, Kinderbetreuung">
+    <meta name="keywords" content="Kindergroßtagespflege, Naturpädagogik, Diespeck, Kinderbetreuung, Kindergarten, Waldkindergarten">
     <!-- Add social media meta tags -->
     <meta property="og:title" content="DIESPECKMÄUSE Natur-Kindergroßtagespflege">
     <meta property="og:description" content="Naturnahe Kinderbetreuung in Diespeck">
