--- a/index_dev.html
+++ b/index_dev.html
@@ -629,65 +629,8 @@
                 </div>
                 <div class="modal-body p-0">
                     <div id="galleryCarousel" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#galleryCarousel" data-slide-to="0" class="active"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="1"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="2"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="3"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="4"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="5"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="6"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="7"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="8"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="9"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="10"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse9.jpg" alt="Bild 1"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse4.jpg" alt="Bild 2"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse6.jpg" alt="Bild 3"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse5.jpg" alt="Bild 4"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse2.jpg" alt="Bild 5"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse7.jpg" alt="Bild 6"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse8.jpg" alt="Bild 7"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse11.jpg" alt="Bild 8"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse1.jpg" alt="Bild 9"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse3.jpg" alt="Bild 10"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse12.jpg" alt="Bild 11"
-                                    loading="lazy">
-                            </div>
-                        </div>
+                        <ol class="carousel-indicators"></ol>
+                        <div class="carousel-inner"></div>
                         <a class="carousel-control-prev" href="#galleryCarousel" role="button" data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="sr-only">Zurück</span>
@@ -732,8 +675,7 @@
     </div>
 
     <!-- Scripts -->
-    console.log('fetching gallery.json from', window.location.href);
-    
+
     <script src="js/jquery-3.5.1.slim.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -753,7 +695,7 @@
         .then(response => response.json())
         .then(allImages => {
           shuffle(allImages);
-          const selected = allImages.slice(0, 10);
+          const selected = allImages.slice(0, 9);
           const gallery = document.getElementById('gallery');
           selected.forEach((src, index) => {
             const col = document.createElement('div');
@@ -767,6 +709,24 @@
             col.appendChild(img);
             gallery.appendChild(col);
           });
+
+          // Build carousel indicators and slides dynamically
+          const indicators = document.querySelector('#galleryCarousel .carousel-indicators');
+          const inner = document.querySelector('#galleryCarousel .carousel-inner');
+          selected.forEach((src, i) => {
+            // Indicator
+            const li = document.createElement('li');
+            li.setAttribute('data-target', '#galleryCarousel');
+            li.setAttribute('data-slide-to', i);
+            if (i === 0) li.classList.add('active');
+            indicators.appendChild(li);
+            // Slide
+            const slide = document.createElement('div');
+            slide.className = 'carousel-item' + (i === 0 ? ' active' : '');
+            slide.innerHTML = `<img class="d-block w-100" src="${src}" alt="" loading="lazy">`;
+            inner.appendChild(slide);
+          });
+
           // Klick-Handler für Modal-Karussell
           document.querySelectorAll('.gallery-img').forEach(imgEl => {
             imgEl.addEventListener('click', function() {
@@ -780,21 +740,7 @@
     });
     </script>
     
-    <script>
-        $(document).ready(function () {
-            // Collapse the navbar on nav-link click
-            $('.navbar-nav>li>a').on('click', function () {
-                $('.navbar-collapse').collapse('hide');
-            });
 
-            // When a gallery image is clicked, open the modal and jump to the correct slide
-            $('.gallery-img').on('click', function () {
-                var index = $(this).data('index');
-                $('#galleryModal').modal('show');
-                $('#galleryCarousel').carousel(parseInt(index, 10));
-            });
-        });
-    </script>
 
     <!-- Insta pop up -->
     <script>
