--- a/index_dev.html
+++ b/index_dev.html
@@ -537,6 +537,14 @@
     <section id="presse" class="py-5">
         <div class="container">
             <h2 class="section-title">Presse</h2>
+            <p><span> Fränkische Landeszeitung, 12.09.2025:</span><br>
+                <div class="pdf-viewer-container"
+                style="display: flex; justify-content: flex-start; align-items: flex-start;">
+                <iframe
+                    src="https://diespeckmäuse.de/js/pdfjs/web/viewer.html?file=https://diespeckmäuse.de/pdf/FLZ_12092025.pdf#zoom=page-fit"
+                    style="width: 100%; height: 48vh;" frameborder="0"></iframe>
+            </div>
+            </p>
             <p><span> Fränkische Landeszeitung, 28.07.2025:</span><br>
                 <div class="pdf-viewer-container"
                 style="display: flex; justify-content: flex-start; align-items: flex-start;">
