--- a/index.html
+++ b/index.html
@@ -364,6 +364,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#contact">Kontakt</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://förderverein.diespeckmäuse.de/">Spenden</a>
+                </li>
 
                 <!-- Social icons -->
 
