--- a/impressum.html
+++ b/impressum.html
@@ -50,7 +50,7 @@
             Am alten Sportplatz 1 <br>
             91456 Diespeck<br>
         </p>
-        <p>Vertreten durch: Susan Lantenhammer, Diana Fornataro</p>
+        <p>Vertreten durch: Susan Lantenhammer, Magdalena Pfundt</p>
         <p>
             E-Mail: hallo@diespeckmaeuse.de<br>
             Telefon: 0160/96862080
